--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>sinking sand resort</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery.css"></script>
-    <script src="js/script.js"></script>
-  </head>
-  <body>
-<h1><marquee><u>SINKING SAND RESORT</u></marquee></h1>
+
+<head>
+  <meta charset="utf-8">
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery.css"></script>
+  <script src="js/script.js"></script>
+  <title>sinking sand resort</title>
+</head>
+
+<body>
+  <h1>
+    <marquee><u>SINKING SAND RESORT</u></marquee>
+  </h1>
+  <h2>I-waiter</h2>
 
 
-  </body>
+</body>
+
 </html>
