--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery.css"></script>
@@ -11,10 +12,32 @@
 </head>
 
 <body>
-  <h1>
-    <marquee><u>SINKING SAND RESORT</u></marquee>
-  </h1>
-  <h2>I-waiter</h2>
+
+<header>
+<div name="navbar">
+</div>
+</header>
+
+<div name="slideshow">
+</div>
+
+<div name="menu" class="container">
+</div>
+
+<div name="parallax">
+</div>
+
+<div name="content/about" class="container">
+</div>
+
+<div name="parallax">
+</div>
+
+<div name="contact" class="container">
+</div>
+
+<div name="footer">
+</div>
 
 
 </body>
