change design of page

--- a/index.html
+++ b/index.html
@@ -1,45 +1,195 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery.css"></script>
-  <script src="js/script.js"></script>
   <title>sinking sand resort</title>
 </head>
 
 <body>
+  <div name="navbar">
 
-<header>
-<div name="navbar">
+  </div>
+<div class="container">
+
+  <div id="intro">
+  <p>SINKING SAND RESORT</p>
+  </div>
+
+
+<div  id="cardspg" class="container">
+
+  <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+        <div class="card ">
+          <div class="img-container">
+            <img src="image/hotel6.jpg" class="card-img-top menu-img" alt="">
+            <span class="menu-item-icon">
+              <i class="fas fa-shopping-cart"></i>
+            </span>
+          </div>
+          <div class="card-body">
+            <div class="card-text d-flex justify-content-between text-capitalize">
+              <h5 id="menu-item-name">juice</h5>
+              <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+            </div>
+          </div>
+       </div>
+      </div>
+
+      <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+            <div class="card ">
+              <div class="img-container">
+                <img src="image/massage1.jpg" class="card-img-top menu-img" alt="">
+                <span class="menu-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body">
+                <div class="card-text d-flex justify-content-between text-capitalize">
+                  <h5 id="menu-item-name">juice</h5>
+                  <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                <div class="card ">
+                  <div class="img-container">
+                    <img src="image/steak1.jpg" class="card-img-top menu-img" alt="">
+                    <span class="menu-item-icon">
+                      <i class="fas fa-shopping-cart"></i>
+                    </span>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-text d-flex justify-content-between text-capitalize">
+                      <h5 id="menu-item-name">juice</h5>
+                      <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                    <div class="card ">
+                      <div class="img-container">
+                        <img src="image/kids2.jpg" class="card-img-top menu-img" alt="">
+                        <span class="menu-item-icon">
+                          <i class="fas fa-shopping-cart"></i>
+                        </span>
+                      </div>
+                      <div class="card-body">
+                        <div class="card-text d-flex justify-content-between text-capitalize">
+                          <h5 id="menu-item-name">juice</h5>
+                          <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                        <div class="card ">
+                          <div class="img-container">
+                            <img src="image/camel3.jpg" class="card-img-top menu-img" alt="">
+                            <span class="menu-item-icon">
+                              <i class="fas fa-shopping-cart"></i>
+                            </span>
+                          </div>
+                          <div class="card-body">
+                            <div class="card-text d-flex justify-content-between text-capitalize">
+                              <h5 id="menu-item-name">juice</h5>
+                              <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                            <div class="card ">
+                              <div class="img-container">
+                                <img src="image/family.jpg" class="card-img-top menu-img" alt="">
+                                <span class="menu-item-icon">
+                                  <i class="fas fa-shopping-cart"></i>
+                                </span>
+                              </div>
+                              <div class="card-body">
+                                <div class="card-text d-flex justify-content-between text-capitalize">
+                                  <h5 id="menu-item-name">juice</h5>
+                                  <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                                <div class="card ">
+                                  <div class="img-container">
+                                    <img src="image/casino2.jpg" class="card-img-top menu-img" alt="">
+                                    <span class="menu-item-icon">
+                                      <i class="fas fa-shopping-cart"></i>
+                                    </span>
+                                  </div>
+                                  <div class="card-body">
+                                    <div class="card-text d-flex justify-content-between text-capitalize">
+                                      <h5 id="menu-item-name">juice</h5>
+                                      <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                                    <div class="card ">
+                                      <div class="img-container">
+                                        <img src="image/bar.jpg" class="card-img-top menu-img" alt="">
+                                        <span class="menu-item-icon">
+                                          <i class="fas fa-shopping-cart"></i>
+                                        </span>
+                                      </div>
+                                      <div class="card-body">
+                                        <div class="card-text d-flex justify-content-between text-capitalize">
+                                          <h5 id="menu-item-name">juice</h5>
+                                          <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 menu-item juice" data-item="juice">
+                                        <div class="card ">
+                                          <div class="img-container">
+                                            <img src="image/end3.jpg" class="card-img-top menu-img" alt="">
+                                            <span class="menu-item-icon">
+                                              <i class="fas fa-shopping-cart"></i>
+                                            </span>
+                                          </div>
+                                          <div class="card-body">
+                                            <div class="card-text d-flex justify-content-between text-capitalize">
+                                              <h5 id="menu-item-name">juice</h5>
+                                              <h5 class="menu-item-value">$ <strong id="menu-item-price" class="font-weight-bold">10</strong></h5>
+
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+
 </div>
-</header>
-
-<div name="slideshow">
-</div>
-
-<div name="menu" class="container">
-</div>
-
-<div name="parallax">
-</div>
-
-<div name="content/about" class="container">
-</div>
-
-<div name="parallax">
-</div>
-
-<div name="contact" class="container">
-</div>
-
-<div name="footer">
 </div>
 
 
+
+
+
+
+<script src="js/jquery.css"></script>
+<script src="js/script.js"></script>
 </body>
-
 </html>
